--- a/4. convolutions/1.cnn_basics_keras.ipynb
+++ b/4. convolutions/1.cnn_basics_keras.ipynb
@@ -31,15 +31,7 @@
    "metadata": {
     "id": "5P4TN6uLyohX"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras\n",
     "import numpy as np\n",
@@ -1694,7 +1686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "nteract": {
    "version": "0.21.0"
